cmake_minimum_required(VERSION 3.5)
project(mLOAM)

# set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "-w")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
# set(CMAKE_CXX_FLAGS_RELEASE "-O2 -g -ggdb ${CMAKE_CXX_FLAGS}")
# set(CMAKE_CXX_FLAGS_DEBUG "-g ${CMAKE_CXX_FLAGS}")

# add_definitions("-DCATKIN_ENABLE_TESTING=0")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)

# option(BUILD_WITH_UBUNTU1804 OFF)

# include(cmake/packages.cmake)
# include_directories(${PROJECT_SOURCE_DIR}/src)
# include_directories(${PROJECT_SOURCE_DIR})
# include_directories(${PROJECT_SOURCE_DIR}/build/devel/include)

# add_subdirectory(src)
find_package(Eigen3 REQUIRED)
message(STATUS "Eigen3 config file: ${Eigen3_DIR}")
message(STATUS "Eigen3 version: ${EIGEN3_VERSION}")
include_directories(${EIGEN3_INCLUDE_DIRS})
find_package(Ceres REQUIRED)
message(STATUS "Ceres version: ${CERES_VERSION}")
find_package(PCL REQUIRED)
message(STATUS "PCL version: ${PCL_VERSION}")
include_directories(${PCL_INCLUDE_DIRS})
add_executable(loam_ceres_demo src/loam_ceres_demo.cpp)
target_link_libraries(loam_ceres_demo ${PCL_LIBRARIES} ${CERES_LIBRARIES})